<resources>
    <string name="app_name">Covid19 Helper</string>
    <string name="personal_details_activity">Personal Details</string>
    <string name="post_activity">Post the help..</string>
    <string name="oxygen_cylinder">Oxygen Cylinder</string>
    <string name="plasma">Plasma Donor</string>
    <string name="beds">Hospital Beds</string>
    <string name="post">Post</string>
    <string name="corona_patients">Covid Patients</string>
    <string name="feedback">Feedback</string>
    <string name="recheck_the_address">Recheck the Address..</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="items_array">
        <item>Oxygen Cylinder</item>
        <item>Plasma</item>
        <item>Hospital Beds</item>
        <item>Covid Patient</item>
    </string-array>
    <string name="google_maps_api_key">AIzaSyB_43uOT-0VlilVYKIfz2pXvREi5FuDyV4</string>

    <string name="verified">Verified (Helped us Properly!!)</string>
    <string name="no_response">No Response (Not able to contact)</string>
    <string name="scam">Scam (Able to contact but no help was given)</string>
    <string name="no_vaccines">no vaccines found</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>
</resources>
